--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,12 @@ description: Generates COM classes from lightly edited header and IDL files.
 version: 1.0.0
 
 environment:
-  sdk: '>=2.18.0-98.0.dev <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
-dependencies: {ffi: ^1.1.2, win32: ^2.5.2} 
+dependencies: 
+  ffi: ^2.0.2
+  win32: ^5.0.0
 
 dev_dependencies:
-  lints: ^2.0.0
-  test: ^1.16.0
+  lints: ^2.1.0
+  test: ^1.24.2
